--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,9 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:2.31.2-alpha"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0-alpha03"
+
+    // Navigation Component
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
+
 }
