--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,10 +68,16 @@ dependencies {
     // Navigation Component
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
+
     // Shimmer
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
     implementation 'com.todkars:shimmer-recyclerview:0.4.0'
 
     // Image Loading library Coil
     implementation "io.coil-kt:coil:1.1.1"
+
+    //Testing
+    testImplementation "io.mockk:mockk:1.10.6"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
 }
